src/StrumpackSparseSolver.h

/*!
 * Enumeration of STRUMPACK precisions, for both the scalars and the
 * integers.
  \ingroup Enumerations
 */
typedef enum
  {
   STRUMPACK_FLOAT,
   STRUMPACK_DOUBLE,
   STRUMPACK_FLOATCOMPLEX,
   STRUMPACK_DOUBLECOMPLEX,
   STRUMPACK_FLOAT_64,
   STRUMPACK_DOUBLE_64,
   STRUMPACK_FLOATCOMPLEX_64,
   STRUMPACK_DOUBLECOMPLEX_64
  } STRUMPACK_PRECISION;
/*!
 * Enumeration of STRUMPACK interfaces.
 * \ingroup Enumerations
 */
typedef enum
  {
   STRUMPACK_MT,        /*!< sequential/multithreaded interface    */
   STRUMPACK_MPI_DIST   /*!< fully distributed, MPI, interface     */
  } STRUMPACK_INTERFACE;
typedef struct {
  void* solver;
  STRUMPACK_PRECISION precision;
  STRUMPACK_INTERFACE interface;
} STRUMPACK_SparseSolver;
typedef enum
  {
   STRUMPACK_NONE=0,
   STRUMPACK_HSS=1,
   STRUMPACK_BLR=2,
   STRUMPACK_HODLR=3,
   STRUMPACK_LOSSLESS=4,
   STRUMPACK_LOSSY=5
  } STRUMPACK_COMPRESSION_TYPE;
typedef enum
  {
   STRUMPACK_MATCHING_NONE=0,
   STRUMPACK_MATCHING_MAX_CARDINALITY=1,
   STRUMPACK_MATCHING_MAX_SMALLEST_DIAGONAL=2,
   STRUMPACK_MATCHING_MAX_SMALLEST_DIAGONAL_2=3,
   STRUMPACK_MATCHING_MAX_DIAGONAL_SUM=4,
   STRUMPACK_MATCHING_MAX_DIAGONAL_PRODUCT_SCALING=5,
   STRUMPACK_MATCHING_COMBBLAS=6
  } STRUMPACK_MATCHING_JOB;
typedef enum
  {
   STRUMPACK_NATURAL=0,
   STRUMPACK_METIS=1,
   STRUMPACK_PARMETIS=2,
   STRUMPACK_SCOTCH=3,
   STRUMPACK_PTSCOTCH=4,
   STRUMPACK_RCM=5,
   STRUMPACK_GEOMETRIC=6
  } STRUMPACK_REORDERING_STRATEGY;
typedef enum
  {
   STRUMPACK_CLASSICAL=0,
   STRUMPACK_MODIFIED=1
  } STRUMPACK_GRAM_SCHMIDT_TYPE;
typedef enum
  {
   STRUMPACK_AUTO=0,
   STRUMPACK_DIRECT=1,
   STRUMPACK_REFINE=2,
   STRUMPACK_PREC_GMRES=3,
   STRUMPACK_GMRES=4,
   STRUMPACK_PREC_BICGSTAB=5,
   STRUMPACK_BICGSTAB=6
  } STRUMPACK_KRYLOV_SOLVER;
typedef enum
  {
   STRUMPACK_SUCCESS=0,
   STRUMPACK_MATRIX_NOT_SET=1,
   STRUMPACK_REORDERING_ERROR=2
  } STRUMPACK_RETURN_CODE;
  STRUMPACK_RETURN_CODE STRUMPACK_factor(STRUMPACK_SparseSolver S);
  void STRUMPACK_move_to_gpu(STRUMPACK_SparseSolver S);
  void STRUMPACK_remove_from_gpu(STRUMPACK_SparseSolver S);
  void STRUMPACK_delete_factors(STRUMPACK_SparseSolver S);
  /*
    TODO add
    - routines to update the matrix values!!!!!
    - solve with multiple rhs??!!!
  */

  /*************************************************************
   ** Set options **********************************************
   ************************************************************/
  void STRUMPACK_set_verbose(STRUMPACK_SparseSolver S, int v);
  void STRUMPACK_set_maxit(STRUMPACK_SparseSolver S, int maxit);
  void STRUMPACK_set_gmres_restart(STRUMPACK_SparseSolver S, int m);
  void STRUMPACK_set_rel_tol(STRUMPACK_SparseSolver S, double tol);
  void STRUMPACK_set_abs_tol(STRUMPACK_SparseSolver S, double tol);
  void STRUMPACK_set_nd_param(STRUMPACK_SparseSolver S, int nd_param);
  void STRUMPACK_set_reordering_method(STRUMPACK_SparseSolver S, STRUMPACK_REORDERING_STRATEGY m);
  void STRUMPACK_set_GramSchmidt_type(STRUMPACK_SparseSolver S, STRUMPACK_GRAM_SCHMIDT_TYPE t);
  void STRUMPACK_set_matching(STRUMPACK_SparseSolver S, STRUMPACK_MATCHING_JOB job);
  void STRUMPACK_set_Krylov_solver(STRUMPACK_SparseSolver S, STRUMPACK_KRYLOV_SOLVER solver_type);
  void STRUMPACK_enable_gpu(STRUMPACK_SparseSolver S);
  void STRUMPACK_disable_gpu(STRUMPACK_SparseSolver S);
  void STRUMPACK_set_compression(STRUMPACK_SparseSolver S, STRUMPACK_COMPRESSION_TYPE t);
  void STRUMPACK_set_compression_min_sep_size(STRUMPACK_SparseSolver S, int size);
  void STRUMPACK_set_compression_min_front_size(STRUMPACK_SparseSolver S, int size);
  void STRUMPACK_set_compression_leaf_size(STRUMPACK_SparseSolver S, int size);
  void STRUMPACK_set_compression_rel_tol(STRUMPACK_SparseSolver S, double rctol);
  void STRUMPACK_set_compression_abs_tol(STRUMPACK_SparseSolver S, double actol);
  void STRUMPACK_set_compression_butterfly_levels(STRUMPACK_SparseSolver S, int l);
  /*************************************************************
   ** Get options **********************************************
   ************************************************************/
  int STRUMPACK_verbose(STRUMPACK_SparseSolver S);
  int STRUMPACK_maxit(STRUMPACK_SparseSolver S);
  int STRUMPACK_get_gmres_restart(STRUMPACK_SparseSolver S);
  double STRUMPACK_rel_tol(STRUMPACK_SparseSolver S);
  double STRUMPACK_abs_tol(STRUMPACK_SparseSolver S);
  int STRUMPACK_nd_param(STRUMPACK_SparseSolver S);
  STRUMPACK_REORDERING_STRATEGY STRUMPACK_reordering_method(STRUMPACK_SparseSolver S);
  STRUMPACK_GRAM_SCHMIDT_TYPE STRUMPACK_GramSchmidt_type(STRUMPACK_SparseSolver S);
  STRUMPACK_MATCHING_JOB STRUMPACK_matching(STRUMPACK_SparseSolver S);
  STRUMPACK_KRYLOV_SOLVER STRUMPACK_Krylov_solver(STRUMPACK_SparseSolver S);
  int STRUMPACK_use_gpu(STRUMPACK_SparseSolver S);
  STRUMPACK_COMPRESSION_TYPE STRUMPACK_compression(STRUMPACK_SparseSolver S);
  int STRUMPACK_compression_min_sep_size(STRUMPACK_SparseSolver S);
  int STRUMPACK_compression_min_front_size(STRUMPACK_SparseSolver S);
  int STRUMPACK_compression_leaf_size(STRUMPACK_SparseSolver S);
  double STRUMPACK_compression_rel_tol(STRUMPACK_SparseSolver S);
  double STRUMPACK_compression_abs_tol(STRUMPACK_SparseSolver S);
  int STRUMPACK_compression_butterfly_levels(STRUMPACK_SparseSolver S);
  /*************************************************************
   ** Get solve statistics *************************************
   ************************************************************/
  int STRUMPACK_its(STRUMPACK_SparseSolver S);
  int STRUMPACK_rank(STRUMPACK_SparseSolver S);
  long long STRUMPACK_factor_nonzeros(STRUMPACK_SparseSolver S);
  long long STRUMPACK_factor_memory(STRUMPACK_SparseSolver S);
  /*************************************************************
   ** Deprecated routines **************************************
   ************************************************************/
  void STRUMPACK_set_mc64job(STRUMPACK_SparseSolver S, int job);