src/fortran/strumpack.f90


function STRUMPACK_factor(s) &
bind(C, name="STRUMPACK_factor") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

subroutine STRUMPACK_move_to_gpu(s) &
bind(C, name="STRUMPACK_move_to_gpu")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
end subroutine

subroutine STRUMPACK_remove_from_gpu(s) &
bind(C, name="STRUMPACK_remove_from_gpu")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
end subroutine

subroutine STRUMPACK_delete_factors(s) &
bind(C, name="STRUMPACK_delete_factors")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
end subroutine

subroutine STRUMPACK_set_verbose(s, v) &
bind(C, name="STRUMPACK_set_verbose")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: v
end subroutine

subroutine STRUMPACK_set_maxit(s, maxit) &
bind(C, name="STRUMPACK_set_maxit")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: maxit
end subroutine

subroutine STRUMPACK_set_gmres_restart(s, m) &
bind(C, name="STRUMPACK_set_gmres_restart")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: m
end subroutine

subroutine STRUMPACK_set_rel_tol(s, tol) &
bind(C, name="STRUMPACK_set_rel_tol")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE), intent(in), value :: tol
end subroutine

subroutine STRUMPACK_set_abs_tol(s, tol) &
bind(C, name="STRUMPACK_set_abs_tol")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE), intent(in), value :: tol
end subroutine

subroutine STRUMPACK_set_nd_param(s, nd_param) &
bind(C, name="STRUMPACK_set_nd_param")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: nd_param
end subroutine

subroutine STRUMPACK_set_reordering_method(s, m) &
bind(C, name="STRUMPACK_set_reordering_method")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: m
end subroutine

subroutine STRUMPACK_set_GramSchmidt_type(s, t) &
bind(C, name="STRUMPACK_set_GramSchmidt_type")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: t
end subroutine

subroutine STRUMPACK_set_matching(s, job) &
bind(C, name="STRUMPACK_set_matching")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: job
end subroutine

subroutine STRUMPACK_set_Krylov_solver(s, solver_type) &
bind(C, name="STRUMPACK_set_Krylov_solver")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: solver_type
end subroutine

subroutine STRUMPACK_enable_gpu(s) &
bind(C, name="STRUMPACK_enable_gpu")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
end subroutine

subroutine STRUMPACK_disable_gpu(s) &
bind(C, name="STRUMPACK_disable_gpu")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
end subroutine

subroutine STRUMPACK_set_compression(s, t) &
bind(C, name="STRUMPACK_set_compression")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: t
end subroutine

subroutine STRUMPACK_set_compression_min_sep_size(s, size) &
bind(C, name="STRUMPACK_set_compression_min_sep_size")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: size
end subroutine

subroutine STRUMPACK_set_compression_min_front_size(s, size) &
bind(C, name="STRUMPACK_set_compression_min_front_size")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: size
end subroutine

subroutine STRUMPACK_set_compression_leaf_size(s, size) &
bind(C, name="STRUMPACK_set_compression_leaf_size")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: size
end subroutine

subroutine STRUMPACK_set_compression_rel_tol(s, rctol) &
bind(C, name="STRUMPACK_set_compression_rel_tol")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE), intent(in), value :: rctol
end subroutine

subroutine STRUMPACK_set_compression_abs_tol(s, actol) &
bind(C, name="STRUMPACK_set_compression_abs_tol")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE), intent(in), value :: actol
end subroutine

subroutine STRUMPACK_set_compression_butterfly_levels(s, l) &
bind(C, name="STRUMPACK_set_compression_butterfly_levels")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: l
end subroutine

function STRUMPACK_verbose(s) &
bind(C, name="STRUMPACK_verbose") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_maxit(s) &
bind(C, name="STRUMPACK_maxit") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_get_gmres_restart(s) &
bind(C, name="STRUMPACK_get_gmres_restart") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_rel_tol(s) &
bind(C, name="STRUMPACK_rel_tol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE) :: fresult
end function

function STRUMPACK_abs_tol(s) &
bind(C, name="STRUMPACK_abs_tol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE) :: fresult
end function

function STRUMPACK_nd_param(s) &
bind(C, name="STRUMPACK_nd_param") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_reordering_method(s) &
bind(C, name="STRUMPACK_reordering_method") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_GramSchmidt_type(s) &
bind(C, name="STRUMPACK_GramSchmidt_type") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_matching(s) &
bind(C, name="STRUMPACK_matching") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function get_STRUMPACK_Krylov_solver(s) &
bind(C, name="STRUMPACK_Krylov_solver") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_use_gpu(s) &
bind(C, name="STRUMPACK_use_gpu") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_compression(s) &
bind(C, name="STRUMPACK_compression") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_compression_min_sep_size(s) &
bind(C, name="STRUMPACK_compression_min_sep_size") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_compression_min_front_size(s) &
bind(C, name="STRUMPACK_compression_min_front_size") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_compression_leaf_size(s) &
bind(C, name="STRUMPACK_compression_leaf_size") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_compression_rel_tol(s) &
bind(C, name="STRUMPACK_compression_rel_tol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE) :: fresult
end function

function STRUMPACK_compression_abs_tol(s) &
bind(C, name="STRUMPACK_compression_abs_tol") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
real(C_DOUBLE) :: fresult
end function

function STRUMPACK_compression_butterfly_levels(s) &
bind(C, name="STRUMPACK_compression_butterfly_levels") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_its(s) &
bind(C, name="STRUMPACK_its") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_rank(s) &
bind(C, name="STRUMPACK_rank") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT) :: fresult
end function

function STRUMPACK_factor_nonzeros(s) &
bind(C, name="STRUMPACK_factor_nonzeros") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_LONG_LONG) :: fresult
end function

function STRUMPACK_factor_memory(s) &
bind(C, name="STRUMPACK_factor_memory") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_LONG_LONG) :: fresult
end function

subroutine STRUMPACK_set_mc64job(s, job) &
bind(C, name="STRUMPACK_set_mc64job")
use, intrinsic :: ISO_C_BINDING
import :: strumpack_sparsesolver
type(STRUMPACK_SparseSolver), intent(in), value :: s
integer(C_INT), intent(in), value :: job
end subroutine
